cabal-version: 1.12

name:           telemonitor
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/IgorBeschastnov/telemonitor#readme>
homepage:       https://github.com/IgorBeschastnov/telemonitor#readme
bug-reports:    https://github.com/IgorBeschastnov/telemonitor/issues
author:         IgorBeschastnov
maintainer:     beschastnovigor@gmail.com
copyright:      2019 Igor Beschastnov
license:        MIT
license-file:   LICENSE
category: web
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/IgorBeschastnov/telemonitor

executable telemonitor-exe
  main-is: Main.hs
  other-modules:
      Paths_telemonitor
      Commands
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        base
      , aeson
      , telegram-bot-simple
      , http-api-data
      , http-client
      , http-client-tls
      , mtl
      , servant-client
      , text
      , time
  default-language: Haskell2010
