cabal-version: 1.12

name:           telemonitor
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/IgorBeschastnov/telemonitor#readme>
homepage:       https://github.com/IgorBeschastnov/telemonitor#readme
bug-reports:    https://github.com/IgorBeschastnov/telemonitor/issues
author:         IgorBeschastnov
maintainer:     beschastnovigor@gmail.com
copyright:      2019 Igor Beschastnov
license:        MIT
license-file:   LICENSE
category: web
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/IgorBeschastnov/telemonitor

executable telemonitor-exe
  main-is: Main.hs
  other-modules:
    Paths_telemonitor
    Commands
    Monitor
    Monitor.Bindings
  hs-source-dirs:
    app
  c-sources:
    src/monitor.c
  include-dirs:
    src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base
    -- std deps
    , text
    , mtl
    -- external deps
    , telegram-bot-simple
  default-language: Haskell2010
